--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ ul.task-list li input[type="checkbox"] {
     <i class="bi bi-twitter"></i>
      <span class="about-link-text">Twitter</span>
   </a>
-  <a href="https://github.com/marvinschmitt" class="about-link" rel="" target="">
+  <a href="https://github.com/wenlanzhang" class="about-link" rel="" target="">
     <i class="bi bi-github"></i>
      <span class="about-link-text">Github</span>
   </a>
@@ -152,7 +152,7 @@ ul.task-list li input[type="checkbox"] {
     <i class="bi bi-linkedin"></i>
      <span class="about-link-text">LinkedIn</span>
   </a>
-  <a href="/wenlan.zhang.21@ucl.ac.uk" class="about-link" rel="" target="">
+  <a href="Wenlan:wenlan.zhang.21@ucl.ac.uk" class="about-link" rel="" target="">
     <i class="bi bi-envelope"></i>
      <span class="about-link-text">Email</span>
   </a>
@@ -161,12 +161,19 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="welcome-to-my-website" class="level1">
 <h1>Welcome to my website!</h1>
-<p>I am Wenlan, This is my website that is still under development.</p>
+<div style="text-align: justify;">
+<p>Wenlan Zhang is a second year Phd student at <a href="https://www.ucl.ac.uk/bartlett/casa/bartlett-centre-advanced-spatial-analysis">The Bartlett Centre for Advanced Spatial Analysis (CASA)</a>, University College London.</p>
+<p>Wenlan is currently working on her research project entitled ‘Quantifying Digital Injustice: The Utility of Digital Footprint Data for Flood Risk Management in the Global South’. She is interested in sustainable smart cities in the Global South countries in general and would like to work in this sector in the future.</p>
+<p>Please feel free to <a href="Wenlan:wenlan.zhang.21@ucl.ac.uk">contact me</a> if you would like to discuss potential projects.</p>
+</div>
 <!-- a renowned wizard and scholar of Middle-earth. Over the centuries, I have dedicated my life to studying the history, languages, and cultures of the peoples of Middle-earth. On this website, I offer a glimpse into my vast body of knowledge, ongoing research, and publications. -->
 <!-- My research interests span the entirety of Middle-earth, from the distant past to the present day. I am particularly passionate about the languages and mythologies of the Elves, Dwarves, and Men, and I have made significant contributions to the understanding of these subjects. My studies of the natural world have also been extensive, and I am an expert in the flora and fauna of Middle-earth. Additionally, I have been involved in many important historical events and offer valuable first-hand accounts and insights on the past. -->
 <!-- Not only am I a scholar, but I am also a mentor and teacher. Over the centuries, I have had the honor of working with many young wizards, passing on my knowledge and experience to the next generation. I have a particular interest in the education of hobbits, whom I see as having great potential despite their small size and simple lifestyle. My teaching style is engaging and accessible, and I encourage my students to think critically and creatively. -->
 <!-- On this website, you will find a selection of my published works, including scholarly articles, monographs, and translations. You will also find news and updates on my current research projects, as well as information on upcoming events and conferences where I will be speaking. I invite you to explore my website and learn more about my life's work as one of Middle-earth's greatest scholars and thinkers. -->
-<!-- Please feel free to [contact me](mailto:mail.marvinschmitt@gmail.com) if you have any questions or would like to discuss potential projects. -->
+<!-- Qili's Website: https://hugoblox.com/templates/ -->
+<div style="margin: 30px; text-align: center;">
+<a class="btn btn-primary" href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/" role="button" target="_blank" style="padding: 15px 30px;">View the tutorial for this template (+ download link)</a>
+</div>
 <div style="margin: 30px; text-align: center;">
 <a class="btn btn-primary" href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/" role="button" target="_blank" style="padding: 15px 30px;">View the tutorial for this template (+ download link)</a>
 </div>
