--- a/cv/index.html
+++ b/cv/index.html
@@ -88,6 +88,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link active" href="../cv/index.html" rel="" target="" aria-current="page">
  <span class="menu-text">CV</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="https://scholar.google.com/citations?user=Zr7A_v4AAAAJ&amp;hl=en" rel="" target="">
+ <span class="menu-text">Publication</span></a>
+  </li>  
 </ul>
 <ul class="navbar-nav navbar-nav-scroll ms-auto">
 <li class="nav-item compact">
