--- a/cv/index.html
+++ b/cv/index.html
@@ -143,7 +143,9 @@ ul.task-list li input[type="checkbox"] {
   </div>
   
 
-</header><div class="cell">
+</header><!-- 
+
+::: {.cell}
 <style type="text/css">
 .embed-container {
     position: relative;
@@ -162,8 +164,9 @@ ul.task-list li input[type="checkbox"] {
     height: 100%;
 }
 </style>
-</div>
-<p class="text-center">
+:::
+
+--><p class="text-center">
   <a class="btn btn-primary btn-lg cv-download" href="cv_Wenlan,Zhang.pdf" target="_blank">
     <i class="fa-solid fa-file-arrow-down"></i> Download current CV
   </a>
