--- a/index.html
+++ b/index.html
@@ -186,10 +186,19 @@ ul.task-list li input[type="checkbox"] {
 <!-- Not only am I a scholar, but I am also a mentor and teacher. Over the centuries, I have had the honor of working with many young wizards, passing on my knowledge and experience to the next generation. I have a particular interest in the education of hobbits, whom I see as having great potential despite their small size and simple lifestyle. My teaching style is engaging and accessible, and I encourage my students to think critically and creatively. -->
 <!-- On this website, you will find a selection of my published works, including scholarly articles, monographs, and translations. You will also find news and updates on my current research projects, as well as information on upcoming events and conferences where I will be speaking. I invite you to explore my website and learn more about my life's work as one of Middle-earth's greatest scholars and thinkers. -->
 <!-- Quarto Gallery: https://quarto.org/docs/gallery/ -->
-<!-- Others: https://hugoblox.com/templates/ -->
-<div style="margin: 30px; text-align: center;">
+<!-- Others: https://hugoblox.com/templates/ 
+
+<!-- 
+
+
+```{=html}
+<div  style="margin: 30px; text-align: center;">
 <a class="btn btn-primary" href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/" role="button" target="_blank" style="padding: 15px 30px;">View the tutorial for this template (+ download link)</a>
 </div>
+```
+
+
+-->
 
 
 
