--- a/cv/index.html
+++ b/cv/index.html
@@ -143,9 +143,7 @@ ul.task-list li input[type="checkbox"] {
   </div>
   
 
-</header><!-- 
-
-::: {.cell}
+</header><div class="cell">
 <style type="text/css">
 .embed-container {
     position: relative;
@@ -164,9 +162,8 @@ ul.task-list li input[type="checkbox"] {
     height: 100%;
 }
 </style>
-:::
-
---><p class="text-center">
+</div>
+<p class="text-center">
   <a class="btn btn-primary btn-lg cv-download" href="cv_Wenlan,Zhang.pdf" target="_blank">
     <i class="fa-solid fa-file-arrow-down"></i> Download current CV
   </a>
@@ -174,9 +171,17 @@ ul.task-list li input[type="checkbox"] {
 <div class="embed-container">
   <iframe src="cv_Wenlan,Zhang.pdf" style="border: 0.5px"></iframe>
 </div>
-<div style="margin: 30px; text-align: center;">
+<!-- 
+
+
+```{=html}
+<div  style="margin: 30px; text-align: center;">
 <a class="btn btn-primary" href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/" role="button" target="_blank" style="padding: 15px 30px;">View the tutorial for this template (+ download link)</a>
 </div>
+```
+
+
+-->
 
 
 
