--- a/projects/index.html
+++ b/projects/index.html
@@ -171,8 +171,8 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="land-cover-change-detection-peak-distric-the-alan-turing-institute-uk" class="level2">
 <h2 class="anchored" data-anchor-id="land-cover-change-detection-peak-distric-the-alan-turing-institute-uk">Land Cover Change Detection (Peak Distric, The Alan Turing Institute, UK)</h2>
-<p><img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"></p>
-<p><a href="https://www.turing.ac.uk/news/publications/data-study-group-final-report-peak-district-national-park-authority" target="_blank">Report</a> | <a href="https://github.com/alan-turing-institute/DSGMay23PeakDistrict" target="_blank">Code</a><br></p>
+<p><img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://www.turing.ac.uk/news/publications/data-study-group-final-report-peak-district-national-park-authority', 'blank');"></p>
+<p><a href="https://www.turing.ac.uk/sites/default/files/2023-11/turing_dsg_report_2023_peak_district_final.pdf" target="_blank">Report</a> | <a href="https://github.com/alan-turing-institute/DSGMay23PeakDistrict" target="_blank">Code</a><br></p>
 <p>• Demonstrated leadership and project management skills in a time-sensitive, interdisciplinary setting • Contributed to innovative solutions for land cover change detection using various methods including deep learning • Played a key role in a collaborative project, advancing understanding in environmental science and data technology</p>
 <!-- 
 ----
