--- a/education/index.html
+++ b/education/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Wenlan Zhang - Experience</title>
+<title>Wenlan Zhang - Education</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -92,12 +92,16 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Photography</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link active" href="../experience/index.html" rel="" target="" aria-current="page">
+    <a class="nav-link" href="../experience/index.html" rel="" target="">
  <span class="menu-text">Experience</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="../cv/index.html" rel="" target="">
  <span class="menu-text">CV</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="https://scholar.google.com/citations?user=Zr7A_v4AAAAJ&amp;hl=en" rel="" target="">
+ <span class="menu-text">Publication</span></a>
   </li>  
 </ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
@@ -143,7 +147,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Experience</h1>
+<h1 class="title">Education</h1>
 </div>
 
 
@@ -158,21 +162,36 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<section id="the-languages-of-middle-earth" class="level2">
-<h2 class="anchored" data-anchor-id="the-languages-of-middle-earth">The Languages of Middle-earth</h2>
-<p><img src="project_1_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2210.07278', 'blank');"></p>
-<p><a href="https://arxiv.org/abs/2210.07278" target="_blank">arXiv Preprint</a> | <a href="https://github.com/marvinschmitt/MetaUncertaintyPaper" target="_blank">Code</a><br></p>
-<p>Over the centuries, I have devoted countless hours to deciphering and translating the ancient scripts and dialects of the various peoples of Middle-earth. My goal is to gain a deeper understanding of the cultures and histories of these peoples by studying their languages. Currently, I am working on a monograph that explores the linguistic roots of the Elvish languages. Through extensive research and analysis, I hope to shed light on the connections between the different dialects of Elvish and their origins. This project has been particularly challenging, as Elvish is a complex and nuanced language, but I am determined to see it through to completion.</p>
+<section id="phd-in-advanced-spatial-analysis" class="level2">
+<h2 class="anchored" data-anchor-id="phd-in-advanced-spatial-analysis">PhD in Advanced Spatial Analysis</h2>
+<p>March 2022 -</p>
+<p><a href="https://www.ucl.ac.uk/bartlett/casa/study/advanced-spatial-analysis-mphilphd" target="_blank">The Bartlett Centre for Advanced Spatial Analysis</a> | <a href="https://www.ucl.ac.uk/" target="_blank">University College London</a><br></p>
+<!-- 
+<img src="project_1_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2210.07278', 'blank');"/>
+
+
+Over the centuries, I have devoted countless hours to deciphering and translating the ancient scripts and dialects of the various peoples of Middle-earth. My goal is to gain a deeper understanding of the cultures and histories of these peoples by studying their languages. Currently, I am working on a monograph that explores the linguistic roots of the Elvish languages. Through extensive research and analysis, I hope to shed light on the connections between the different dialects of Elvish and their origins. This project has been particularly challenging, as Elvish is a complex and nuanced language, but I am determined to see it through to completion.
+-->
 <hr>
 </section>
-<section id="the-history-of-the-war-of-the-ring" class="level2">
-<h2 class="anchored" data-anchor-id="the-history-of-the-war-of-the-ring">The History of the War of the Ring</h2>
+<section id="msc-in-environmental-technology" class="level2">
+<h2 class="anchored" data-anchor-id="msc-in-environmental-technology">MSc in Environmental Technology</h2>
 <p><img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"></p>
-<p><a href="https://arxiv.org/abs/2112.08866" target="_blank">arXiv Preprint</a> | <a href="https://github.com/marvinschmitt/ModelMisspecificationBF" target="_blank">Code</a><br></p>
-<p>I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth’s history and provide valuable insights into the motivations and actions of the various players involved.</p>
-<div style="margin: 30px; text-align: center;">
+<p><a href="https://www.imperial.ac.uk/environmental-policy/" target="_blank">Centre for Environmental Policy,</a> | <a href="https://www.imperial.ac.uk/" target="_blank">Imperial College London</a><br></p>
+<!-- 
+I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.
+-->
+<!-- 
+
+
+```{=html}
+<div  style="margin: 30px; text-align: center;">
 <a class="btn btn-primary" href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/" role="button" target="_blank" style="padding: 15px 30px;">View the tutorial for this template (+ download link)</a>
 </div>
+```
+
+
+-->
 
 
 </section>
