--- a/education/index.html
+++ b/education/index.html
@@ -88,16 +88,16 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Projects</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="../photography/index.html" rel="" target="">
- <span class="menu-text">Photography</span></a>
-  </li>  
-  <li class="nav-item">
     <a class="nav-link" href="../experience/index.html" rel="" target="">
  <span class="menu-text">Experience</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="../cv/index.html" rel="" target="">
  <span class="menu-text">CV</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link active" href="../education/index.html" rel="" target="" aria-current="page">
+ <span class="menu-text">Education</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="https://scholar.google.com/citations?user=Zr7A_v4AAAAJ&amp;hl=en" rel="" target="">
@@ -165,7 +165,9 @@ ul.task-list li input[type="checkbox"] {
 <section id="phd-in-advanced-spatial-analysis" class="level2">
 <h2 class="anchored" data-anchor-id="phd-in-advanced-spatial-analysis">PhD in Advanced Spatial Analysis</h2>
 <p>March 2022 -</p>
-<p><a href="https://www.ucl.ac.uk/bartlett/casa/study/advanced-spatial-analysis-mphilphd" target="_blank">The Bartlett Centre for Advanced Spatial Analysis</a> | <a href="https://www.ucl.ac.uk/" target="_blank">University College London</a><br></p>
+<p><a href="https://www.ucl.ac.uk/bartlett/casa/study/advanced-spatial-analysis-mphilphd" target="_blank">Centre for Advanced Spatial Analysis (CASA)</a> | <a href="https://www.ucl.ac.uk/bartlett/" target="_blank">The Bartlett Faculty of the Built Environment </a><br> | <a href="https://www.ucl.ac.uk/" target="_blank">University College London</a><br></p>
+<p>Research Topic: Comparing the utility of digital footprint data with existing methods on flood risk management and data injustice mitigation, a case study of Nairobi, Kenya</p>
+<p>Research Plan: Developing a workflow to assess the performance of digital footprint data in flood risk management by comparing with traditional methods in Nairobi, Kenya; Identifying digital invisible groups and proposing mitigation approaches to empower these groups for data-enabled decision-making.</p>
 <!-- 
 <img src="project_1_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2210.07278', 'blank');"/>
 
@@ -176,11 +178,24 @@ Over the centuries, I have devoted countless hours to deciphering and translatin
 </section>
 <section id="msc-in-environmental-technology" class="level2">
 <h2 class="anchored" data-anchor-id="msc-in-environmental-technology">MSc in Environmental Technology</h2>
-<p><img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"></p>
-<p><a href="https://www.imperial.ac.uk/environmental-policy/" target="_blank">Centre for Environmental Policy,</a> | <a href="https://www.imperial.ac.uk/" target="_blank">Imperial College London</a><br></p>
-<!-- 
+<p>September 2019 - September 2020</p>
+<p><a href="https://www.imperial.ac.uk/environmental-policy/" target="_blank">Centre for Environmental Policy</a> | <a href="https://www.imperial.ac.uk/natural-sciences/" target="_blank">Faculty of Natural Sciences</a><br> | <a href="https://www.imperial.ac.uk/" target="_blank">Imperial College London</a><br></p>
+<p>Master Thesis: Distributed Ledger Technology enabled passenger control system to maintain social distancing on public transport during COVID-19</p>
+<p>Result &amp; Outcome: Applied a resource-sharing algorithm to the public transport sector to control the movement of the passengers. The system also came with a compliance scheme achieved by distributed ledger technology. The model used smart card data from London underground to simulate pass <!-- 
+<img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
+--></p>
+<hr>
+</section>
+<section id="beng-in-marine-resource-development-technology" class="level2">
+<h2 class="anchored" data-anchor-id="beng-in-marine-resource-development-technology">BEng in Marine Resource Development Technology</h2>
+<p>September 2015 - June 2019</p>
+<p><a href="https://mc.wh.sdu.edu.cn/" target="_blank">Marine College</a> | <a href="https://www.en.sdu.edu.cn/" target="_blank">Shandong University</a><br> <a href="https://mc.wh.sdu.edu.cn/" target="_blank">海洋学院</a> | <a href="https://www.sdu.edu.cn/" target="_blank">山东大学</a><br></p>
+<p>Bachelor Thesis: An Anoxic Bio-Filter (ABF) - Membrane Bioreactor (MBR) combined process on high salinity wastewater treatment and the effect of membrane fouling</p>
+<p>Result &amp; Outcome: Designed and installed an ABF system to augment the existing MBR setup; Conducted rigorous testing to evaluate the efficiency of the combined ABF-MBR process on denitrification effect and alleviate the membrane fouling; Producing report detailing findings and recommendations. <!-- 
+<img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
+--> <!-- 
 I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.
--->
+--></p>
 <!-- 
 
 
