--- a/experience/index.html
+++ b/experience/index.html
@@ -88,16 +88,16 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Projects</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="../photography/index.html" rel="" target="">
- <span class="menu-text">Photography</span></a>
-  </li>  
-  <li class="nav-item">
     <a class="nav-link active" href="../experience/index.html" rel="" target="" aria-current="page">
  <span class="menu-text">Experience</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="../cv/index.html" rel="" target="">
  <span class="menu-text">CV</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="../education/index.html" rel="" target="">
+ <span class="menu-text">Education</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="https://scholar.google.com/citations?user=Zr7A_v4AAAAJ&amp;hl=en" rel="" target="">
