--- a/presentation/index.html
+++ b/presentation/index.html
@@ -92,16 +92,20 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Experience</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="../cv/index.html" rel="" target="">
- <span class="menu-text">CV</span></a>
+    <a class="nav-link" href="../education/index.html" rel="" target="">
+ <span class="menu-text">Education</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link active" href="../education/index.html" rel="" target="" aria-current="page">
- <span class="menu-text">Education</span></a>
+    <a class="nav-link active" href="../presentation/index.html" rel="" target="" aria-current="page">
+ <span class="menu-text">Presentation</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="https://scholar.google.com/citations?user=Zr7A_v4AAAAJ&amp;hl=en" rel="" target="">
  <span class="menu-text">Publication</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="../cv/index.html" rel="" target="">
+ <span class="menu-text">CV</span></a>
   </li>  
 </ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
@@ -176,37 +180,14 @@ Over the centuries, I have devoted countless hours to deciphering and translatin
 -->
 <hr>
 </section>
-<section id="msc-in-environmental-technology" class="level2">
-<h2 class="anchored" data-anchor-id="msc-in-environmental-technology">MSc in Environmental Technology</h2>
-<p>September 2019 - September 2020</p>
-<p><a href="https://www.imperial.ac.uk/environmental-policy/" target="_blank">Centre for Environmental Policy</a> | <a href="https://www.imperial.ac.uk/natural-sciences/" target="_blank">Faculty of Natural Sciences</a><br> | <a href="https://www.imperial.ac.uk/" target="_blank">Imperial College London</a><br></p>
-<p>Master Thesis: Distributed Ledger Technology enabled passenger control system to maintain social distancing on public transport during COVID-19</p>
-<p>Result &amp; Outcome: Applied a resource-sharing algorithm to the public transport sector to control the movement of the passengers. The system also came with a compliance scheme achieved by distributed ledger technology. The model used smart card data from London underground to simulate pass <!-- 
-<img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
---></p>
-<hr>
-</section>
-<section id="beng-in-marine-resource-development-technology" class="level2">
-<h2 class="anchored" data-anchor-id="beng-in-marine-resource-development-technology">BEng in Marine Resource Development Technology</h2>
-<p>September 2015 - June 2019</p>
-<p><a href="https://mc.wh.sdu.edu.cn/" target="_blank">Marine College</a> | <a href="https://www.en.sdu.edu.cn/" target="_blank">Shandong University</a><br> <a href="https://mc.wh.sdu.edu.cn/" target="_blank">海洋学院</a> | <a href="https://www.sdu.edu.cn/" target="_blank">山东大学</a><br></p>
-<p>Bachelor Thesis: An Anoxic Bio-Filter (ABF) - Membrane Bioreactor (MBR) combined process on high salinity wastewater treatment and the effect of membrane fouling</p>
-<p>Result &amp; Outcome: Designed and installed an ABF system to augment the existing MBR setup; Conducted rigorous testing to evaluate the efficiency of the combined ABF-MBR process on denitrification effect and alleviate the membrane fouling; Producing report detailing findings and recommendations. <!-- 
-<img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
---> <!-- 
-I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.
---></p>
+<section id="the-12-international-conference-on-geographic-information-science" class="level2">
+<h2 class="anchored" data-anchor-id="the-12-international-conference-on-geographic-information-science">The 12 International Conference on Geographic Information Science</h2>
 <!-- 
-
-
-```{=html}
-<div  style="margin: 30px; text-align: center;">
-<a class="btn btn-primary" href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/" role="button" target="_blank" style="padding: 15px 30px;">View the tutorial for this template (+ download link)</a>
-</div>
-```
-
-
+<img src="GIScience_23.jpg" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://giscience2023.github.io/', 'blank');"/>
 -->
+<p>12 - 15th September, 2023. Leeds, UK</p>
+<p><a href="https://github.com/wenlanzhang/wenlanzhang.github.io/blob/main/presentation/20230914_GIScience.pdf" target="_blank">Presentation</a> | <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.GIScience.2023.94" target="_blank">Short Paper</a><br></p>
+<hr>
 
 
 </section>
