--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@ ul.task-list li input[type="checkbox"] {
     <i class="bi bi-github"></i>
      <span class="about-link-text">Github</span>
   </a>
-  <a href="/www.linkedin.com/in/wenlan-zhang" class="about-link" rel="" target="">
+  <a href="https://www.linkedin.com/in/wenlan-zhang" class="about-link" rel="" target="">
     <i class="bi bi-linkedin"></i>
      <span class="about-link-text">LinkedIn</span>
   </a>
-  <a href="Wenlan:wenlan.zhang.21@ucl.ac.uk" class="about-link" rel="" target="">
+  <a href="mailto:wenlan.zhang.21@ucl.ac.uk" class="about-link" rel="" target="">
     <i class="bi bi-envelope"></i>
      <span class="about-link-text">Email</span>
   </a>
