--- a/projects/index.html
+++ b/projects/index.html
@@ -174,37 +174,76 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="forest-integrity-and-recovery-for-euboea-fire-greece" class="level2">
-<h2 class="anchored" data-anchor-id="forest-integrity-and-recovery-for-euboea-fire-greece">Forest Integrity and Recovery for Euboea (FIRE, Greece)</h2>
-<p><img src="project_1_banner.JPG" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://www.aristeia.us/isec-program.html', 'blank');"></p>
-<p><a href="https://zhangwl54.projects.earthengine.app/view/firedetectionevia" target="_blank">Open Data Fire Detection App</a> | <a href="https://www.canva.com/design/DAF3nbr3Uvo/yx4Gr8MoqEFrE-xZueCnbw/view?utm_content=DAF3nbr3Uvo&amp;utm_campaign=designshare&amp;utm_medium=link&amp;utm_source=editor" target="_blank">Project Presentation</a><br></p>
-<p>Responsiblilty:<br>
-Field research about the cause of wild fire in Greece<br>
-understand the impact to local public health (what chemicals are produced from he fire and how bad they are to human health)<br>
-Learn local expertise of how to prevent disaster from hazard</p>
-<p>Achievement:<br>
-Provide policy recomendations for local authorities from disaster management perspective<br>
-designed a wild fire report system, and demosntretd with an web app</p>
+<section id="forest-integrity-and-recovery-for-euboea-fire" class="level2">
+<h2 class="anchored" data-anchor-id="forest-integrity-and-recovery-for-euboea-fire">Forest Integrity and Recovery for Euboea (FIRE)</h2>
+<div style="text-align: center; font-style: italic; color: gray; margin-bottom: 20px;">
+<p>Location: Euboea, Greece | Funded by: <a href="https://www.aristeia.us/isec.html" target="_blank">Interdisciplinary School for Environmental Crisis (ISEC)</a></p>
+</div>
+<div style="text-align: center;">
+<p><img src="project_1_banner.JPG" style="max-width: 100%; height: auto;" alt="Forest Integrity and Recovery for Euboea" onclick="window.open('https://www.aristeia.us/isec-program.html', '_blank');"></p>
+</div>
+<div style="text-align: center; margin-top: 10px;">
+<p><a href="https://zhangwl54.projects.earthengine.app/view/firedetectionevia" target="_blank" style="margin-right: 20px;">🌍 Open Data Fire Detection App </a> | <a href="https://www.canva.com/design/DAF3nbr3Uvo/yx4Gr8MoqEFrE-xZueCnbw/view?utm_content=DAF3nbr3Uvo&amp;utm_campaign=designshare&amp;utm_medium=link&amp;utm_source=editor" target="_blank" style="margin-left: 20px;">📊 Project Presentation</a></p>
+</div>
+<section id="project-responsibilities" class="level3">
+<h3 class="anchored" data-anchor-id="project-responsibilities">Project Responsibilities:</h3>
+<ul>
+<li><strong>Fire Monitoring</strong>: Led the fire monitoring efforts by developing and implementing a system to track and analyze wildfire activity using advanced spatial data analysis techniques.</li>
+<li><strong>Field Research</strong>: Conducted on-the-ground research to understand the causes of wildfires in Greece and their impact on local public health.</li>
+<li><strong>Environmental Monitoring</strong>: Developed tools for monitoring environmental changes, contributing to better disaster prevention and management strategies.</li>
+<li><strong>Policy Recommendations</strong>: Provided actionable policy recommendations for local authorities based on the findings from the fire monitoring and environmental analysis.</li>
+</ul>
+</section>
+<section id="key-contributions" class="level3">
+<h3 class="anchored" data-anchor-id="key-contributions">Key Contributions:</h3>
+<ul>
+<li><strong>Fire Monitoring Application</strong>: Designed and launched a wildfire reporting system through a custom web application, showcasing my expertise in spatial data analysis.</li>
+<li><strong>Policy Recommendations</strong>: Provided actionable policy recommendations to local authorities, supporting disaster management and wildfire recovery efforts.</li>
+</ul>
 <hr>
 </section>
-<section id="land-cover-change-detection-peak-distric-the-alan-turing-institute-uk" class="level2">
-<h2 class="anchored" data-anchor-id="land-cover-change-detection-peak-distric-the-alan-turing-institute-uk">Land Cover Change Detection (Peak Distric, The Alan Turing Institute, UK)</h2>
-<p><img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://www.turing.ac.uk/news/publications/data-study-group-final-report-peak-district-national-park-authority', 'blank');"></p>
-<p><a href="https://www.turing.ac.uk/sites/default/files/2023-11/turing_dsg_report_2023_peak_district_final.pdf" target="_blank">Report</a> | <a href="https://github.com/alan-turing-institute/DSGMay23PeakDistrict" target="_blank">Code</a><br></p>
-<p>Responsibility:</p>
-<p>Achievement: • Demonstrated leadership and project management skills in a time-sensitive, interdisciplinary setting<br>
-• Contributed to innovative solutions for land cover change detection using various methods including deep learning<br>
-• Played a key role in a collaborative project, advancing understanding in environmental science and data technology</p>
-<hr>
 </section>
-<section id="fright-gps-location-detection-hunan-china" class="level2">
-<h2 class="anchored" data-anchor-id="fright-gps-location-detection-hunan-china">Fright GPS location detection (Hunan, China)</h2>
-<p><img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://www.turing.ac.uk/news/publications/data-study-group-final-report-peak-district-national-park-authority', 'blank');"></p>
-<p><a href="https://www.turing.ac.uk/sites/default/files/2023-11/turing_dsg_report_2023_peak_district_final.pdf" target="_blank">Report</a> | <a href="https://github.com/alan-turing-institute/DSGMay23PeakDistrict" target="_blank">Code</a><br></p>
-<p>Responsibility:</p>
-<p>Achievement: • Demonstrated leadership and project management skills in a time-sensitive, interdisciplinary setting<br>
-• Contributed to innovative solutions for land cover change detection using various methods including deep learning<br>
-• Played a key role in a collaborative project, advancing understanding in environmental science and data technology</p>
+<section id="land-cover-change-detection" class="level2">
+<h2 class="anchored" data-anchor-id="land-cover-change-detection">Land Cover Change Detection</h2>
+<div style="text-align: center; font-style: italic; color: gray; margin-bottom: 20px;">
+<p>Location: Peak District, UK | Funded by: <a href="https://www.turing.ac.uk/" target="_blank">The Alan Turing Institute</a></p>
+</div>
+<div style="text-align: center;">
+<p><img src="project_2_banner.png" style="max-width: 100%; height: auto;" alt="Land Cover Change Detection" onclick="window.open('https://www.turing.ac.uk/news/publications/data-study-group-final-report-peak-district-national-park-authority', '_blank');"></p>
+</div>
+<div style="text-align: center; margin-top: 10px;">
+<p><a href="https://www.turing.ac.uk/sites/default/files/2023-11/turing_dsg_report_2023_peak_district_final.pdf" target="_blank" style="margin-right: 20px;">📄 Project Report</a> | <a href="https://github.com/alan-turing-institute/DSGMay23PeakDistrict" target="_blank" style="margin-left: 20px;">💻 Project Code</a></p>
+</div>
+<section id="project-responsibilities-1" class="level3">
+<h3 class="anchored" data-anchor-id="project-responsibilities-1">Project Responsibilities:</h3>
+<ul>
+<li><strong>Algorithm Development</strong>: Led the creation of unsupervised AI/ML algorithms to detect land cover changes in the Peak District National Park using multispectral aerial photography.</li>
+<li><strong>Change Mapping</strong>: Produced detailed change maps, identifying areas of significant conservation interest, such as deforestation and peat restoration.</li>
+<li><strong>Environmental Monitoring</strong>: Contributed to improving tools for environmental monitoring, enabling better conservation efforts across the National Park.</li>
+</ul>
+</section>
+<section id="key-contributions-1" class="level3">
+<h3 class="anchored" data-anchor-id="key-contributions-1">Key Contributions:</h3>
+<ul>
+<li><strong>Innovative Change Detection</strong>: Developed advanced algorithms using deep learning and other AI techniques to detect land cover changes with high accuracy.</li>
+<li><strong>Leadership and Facilitation</strong>: Served as one of the two facilitators of the team, demonstrating strong leadership and project management in a collaborative, time-sensitive environment.</li>
+<li><strong>Impactful Environmental Insights</strong>: Delivered crucial insights and tools for environmental monitoring, significantly advancing the understanding of land cover changes in the Peak District National Park.</li>
+</ul>
+<hr>
+<!-- ## Fright GPS location detection (Hunan, China)
+
+<img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://www.turing.ac.uk/news/publications/data-study-group-final-report-peak-district-national-park-authority', 'blank');"/>
+
+<a href="https://www.turing.ac.uk/sites/default/files/2023-11/turing_dsg_report_2023_peak_district_final.pdf" target="_blank">Report</a> | <a href="https://github.com/alan-turing-institute/DSGMay23PeakDistrict" target="_blank">Code</a><br>
+
+Responsibility: 
+
+
+Achievement: 
+• Demonstrated leadership and project management skills in a time-sensitive, interdisciplinary setting  
+• Contributed to innovative solutions for land cover change detection using various methods including deep learning  
+• Played a key role in a collaborative project, advancing understanding in environmental science and data technology  
+-->
 <!-- 
 ----
 
@@ -229,6 +268,7 @@ I am creating a comprehensive and detailed history of the conflict that goes bey
 -->
 
 
+</section>
 </section>
 
 </main> <!-- /main -->
