--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ ul.task-list li input[type="checkbox"] {
 
 
 
+<p>format: html: css: styles.css</p>
 <div class="quarto-about-jolla content">
   <img src="img/my_image.JPEG" class="about-image
   round " style="height: 15em; width: 15em;">
