--- a/presentation/index.html
+++ b/presentation/index.html
@@ -176,8 +176,14 @@ ul.task-list li input[type="checkbox"] {
 
 
 <hr>
-<section id="the-8th-international-disaster-and-risk-conference-idrc-2025" class="level2">
+<section id="the-8th-international-disaster-and-risk-conference-idrc-2025" class="level2 page-columns page-full">
 <h2 class="anchored" data-anchor-id="the-8th-international-disaster-and-risk-conference-idrc-2025"><a href="https://idrc2025.cyens.org.cy/">The 8th International Disaster and Risk Conference (IDRC 2025)</a></h2>
+<div class="quarto-figure quarto-figure-center page-columns page-full">
+<figure class="figure page-columns page-full">
+<p><img src="IDRC25.png" class="img-fluid figure-img"></p>
+<figcaption class="margin-caption">IDRC 2025</figcaption>
+</figure>
+</div>
 <p><strong>Date:</strong> October 22-24, 2025<br>
 <strong>Location:</strong> CYENS Centre of Excellence, Nicosia, Cyprus<br>
 <strong>Title:</strong> Is Waste Blocking Our Cities? A Multisource Approach to Understanding Flood Disruption in Nairobi<br>
@@ -191,23 +197,25 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="netmob-2025"><a href="https://netmob.org/www25/">Netmob 2025</a></h2>
 <div class="quarto-figure quarto-figure-center page-columns page-full">
 <figure class="figure page-columns page-full">
-<p><img src=".png" class="img-fluid figure-img"></p>
+<p><img src="Netmob2025.png" class="img-fluid figure-img"></p>
 <figcaption class="margin-caption">Netmob 2025</figcaption>
 </figure>
 </div>
 <p><strong>Date:</strong> October 8-10, 2025<br>
 <strong>Location:</strong> Paris, France<br>
-<strong>Title:</strong> Unveiling Urban Travel Patterns: A Comparative Analysis of Smart Card and Mobile App Data<br>
-<strong>Authors:</strong><br>
+<strong>Main Conference Research Title:</strong> Decomposing International Migration Flows with Mobile Trace Data: Trends, Seasonality, and Shocks<br>
+<strong>Main Conference Research Authors:</strong>Wenlan Zhang , Dr Douglas R. Leasure<br>
+<strong>Data Challenge Title:</strong> Integrating Temporal Context into User Profiling: A Preliminary Study with Doc2Vec<br>
+<strong>Data Challenge Authors:</strong>Wenlan Zhang, Adam(ZhengZi) Zhou, Andrew Renninger<br>
 <strong>Acknowledgement:</strong> This presentation was supported by Netmob 2025 student travel grant and Leverhulme Centre for Demographic Science (LCDS), University in Oxford.<br>
-<a href="https://github.com/OxfordDemSci/Mapineq/blob/214-add-code-to-api/docs/api_tutorial_jupyter_notebook/Mapineq_API.ipynb">View Tutorial</a> | <a href="https://">View</a></p>
+<a href="https://www.canva.com/design/DAG0jmiuaMU/rVsV1izHsTdP1RbSfnynMA/view?utm_content=DAG0jmiuaMU&amp;utm_campaign=designshare&amp;utm_medium=link2&amp;utm_source=uniquelinks&amp;utlId=hac0c14271c">View Poster</a> &nbsp;| <a href="https://netmob.org/www25/files/NetMob25_Book_of_Abstracts.pdf">View Abstract</a></p>
 <hr>
 </section>
 <section id="city-plus-2025" class="level2 page-columns page-full">
 <h2 class="anchored" data-anchor-id="city-plus-2025"><a href="https://www.city-plus.org/">City Plus 2025</a></h2>
 <div class="quarto-figure quarto-figure-center page-columns page-full">
 <figure class="figure page-columns page-full">
-<p><img src=".png" class="img-fluid figure-img"></p>
+<p><img src="City+.png" class="img-fluid figure-img"></p>
 <figcaption class="margin-caption">City+ 2025</figcaption>
 </figure>
 </div>
@@ -222,7 +230,7 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="th-international-conference-on-computational-social-science-ic2s2-2025"><a href="https://www.ic2s2-2025.org/">11th International Conference on Computational Social Science (IC2S2 2025)</a></h2>
 <div class="quarto-figure quarto-figure-center page-columns page-full">
 <figure class="figure page-columns page-full">
-<p><img src=".png" class="img-fluid figure-img"></p>
+<p><img src="IC2S22025.png" class="img-fluid figure-img"></p>
 <figcaption class="margin-caption">IC2S2 2025</figcaption>
 </figure>
 </div>
@@ -231,7 +239,7 @@ ul.task-list li input[type="checkbox"] {
 <strong>Title:</strong> AI for Spatial Justice: Multimodal and Street View Imagery Uncover Waste Disparities in Nairobi’s Informal Settlements<br>
 <strong>Authors:</strong> Wenlan Zhang, Prof.&nbsp;Chen Zhong, Prof.&nbsp;Qunshan Zhao<br>
 <strong>Acknowledgement:</strong> This presentation was supported by UCL CASA student travel grant.<br>
-<a href="https://github.com/OxfordDemSci/Mapineq/blob/214-add-code-to-api/docs/api_tutorial_jupyter_notebook/Mapineq_API.ipynb">View Poster</a> | <a href="https://www.ic2s2-2025.org/program/#sessions-list">Abstract</a></p>
+<a href="https://www.canva.com/design/DAGsHQL841o/zigFJsbtFMs5bKgv3uo84w/view?utm_content=DAGsHQL841o&amp;utm_campaign=designshare&amp;utm_medium=link2&amp;utm_source=uniquelinks&amp;utlId=h2de3242ed8">View Poster</a> | <a href="https://www.ic2s2-2025.org/program/#sessions-list">Abstract</a></p>
 <hr>
 </section>
 <section id="netmob-2024" class="level2 page-columns page-full">
